# DSP_lab

./: .gitignore  Notes.txt  README.md  hello_world.code-workspace
hello_world/: CMakeLists.txt  CMakePresets.json  common_settings.cmake  global.h  hello_world.cpp  hello_world_buffer.cpp  hello_world_buffer.h  hello_world_circ_buffer.cpp  hello_world_circ_buffer.h  hello_world_config.h  toolchain_arm-none-eabi-gcc-13.3.Rel1.cmake
hello_world/Device/: S6E2CCAJ0A.ld  S6E2CCAJOA.ld  S6E2CCAJOA_generated2.ld  platform.c  startup_S6E2CCAJ0A.c
hello_world/PDL/: system_s6e2cc.h
hello_world/cmake/: common_settings.cmake  toolchain_arm-none-eabi-gcc-13.3.Rel1.cmake  utils.cmake
hello_world/device/: S6E2CCAJOA.ld  S6E2CCAJOA.ld.cc  device_config.h  startup_S6E2CCAJOA.c
hello_world/system/include/S6E2CCA/PDL/: system_s6e2cc.h
hello_world/utils/: debug_utils.cpp  debug_utils.h  platform.cpp  platform.h  utils.cpp  utils.h
